remove box focus of buttons on android/ios

--- a/animism-site/src/styles/global.css
+++ b/animism-site/src/styles/global.css
@@ -178,6 +178,19 @@ a:hover {
   color: var(--link-hover);
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
+button:focus,
+a:focus,
+.toggle:focus,
+.toggleButton:focus {
+  outline: none;
+}
+
+
+
 
 /* ──────────────────────────────────────────
         ✍️ Headings
